Software Version 1.1.0 - Fixed App overflow items as "hide".

--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -30,4 +30,5 @@ body {
   grid-template-rows: min-content repeat(3, 1fr) min-content;
   height: 100vh;
   margin: auto;
+  overflow: hidden;
 }
